session21-python/24BCS10106-antara-utane/final-devops-project/kubernetes/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stockpilot
  namespace: final-k8s
spec:
  ingressClassName: nginx
  rules:
    - host: stockpilot-k8s.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stockpilot-api
                port: {name: http}
